<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.user.SelectedCategoryActivity">

    <LinearLayout
        android:layout_margin="16dp"
        android:id="@+id/linearHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textCategory"
            android:fontFamily="@font/raleway"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Kamu mau servis Mesin Cuci?"/>

        <TextView
            android:layout_marginTop="4dp"
            android:fontFamily="@font/raleway"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/default_text_color"
            android:text="Silahkan Pilih  Berbagai Kemudahan\nYang Kami Berikan Untuk Anda!"/>


    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="8dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/linearHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:onClick="openNearbyService"
            android:layout_margin="8dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="#f0f0f0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:orientation="horizontal"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="82dp"
                    android:src="@drawable/ic_nearby"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_marginStart="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:fontFamily="@font/raleway_semibold"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/servis_terdekat"/>

                    <TextView
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/raleway"
                        android:textSize="14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#808080"
                        android:text="@string/description_servis_terdekat"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="openPickupSerice"
            android:layout_margin="8dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="#f0f0f0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:orientation="horizontal"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="82dp"
                    android:src="@drawable/ic_pick_up"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_marginStart="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:fontFamily="@font/raleway_semibold"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/jemput_barang"/>

                    <TextView
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/raleway"
                        android:textSize="14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#808080"
                        android:text="@string/description_jemput_barang"/>


                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_margin="8dp"
            android:onClick="openCallService"
            app:cardElevation="8dp"
            app:cardBackgroundColor="#f0f0f0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp">


            <LinearLayout
                android:orientation="horizontal"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="82dp"
                    android:src="@drawable/ic_call"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_marginStart="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:fontFamily="@font/raleway_semibold"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/servis_panggilan"/>

                    <TextView
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/raleway"
                        android:textSize="14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#808080"
                        android:text="@string/description_servis_panggilan"/>


                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>


</RelativeLayout>